# cricanalytics

./: .gitignore  LICENSE.txt  README.md  pyproject.toml  requirements.txt  setup.py
data/t20s_male_json/: README.txt
data_provider/: datafetcher.py  exceptions.py  match.py  player.py  series.py  summary.py
espncricinfo/: match.py  player.py
src/espncricinfo/: match.py
src/winpredictor/: download.py  main.py
winpredictor/: main.py  matchdata.py  predict.py  test.py
