requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"
[project]
name = "cricanalytics-winpredictor"
version = "0.0.1"
authors = [
  { name="Naveen Tirupattur", email="naveen.tirupattur@gmail.com" },
]
description = "Cricket match win predictor"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/pypa/sampleproject"
"Bug Tracker" = "https://github.com/pypa/sampleproject/issues"
